crates/alder-parse/src/snapshots/alder_parse__query__tests__select_order_by_desc.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users orderBy users.created desc }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 57,
        },
    },
    value: Query(
        Select(
            Select {
                projection: Star(
                    Region {
                        start: Position {
                            line: 1,
                            column: 16,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                ),
                from: TableRef {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 23,
                            },
                            end: Position {
                                line: 1,
                                column: 28,
                            },
                        },
                        value: "users",
                    },
                    alias: None,
                },
                joins: [],
                where_: None,
                group_by: [],
                order_by: [
                    Order {
                        expr: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 37,
                                },
                                end: Position {
                                    line: 1,
                                    column: 50,
                                },
                            },
                            value: Access {
                                record: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 37,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 42,
                                        },
                                    },
                                    value: Var(
                                        "users",
                                    ),
                                },
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 43,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 50,
                                        },
                                    },
                                    value: "created",
                                },
                            },
                        },
                        direction: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 51,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 55,
                                    },
                                },
                                value: Desc,
                            },
                        ),
                    },
                ],
                limit: None,
                offset: None,
            },
        ),
    ),
}
