crates/alder-parse/src/snapshots/alder_parse__query__tests__select_order_by_multiple.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users orderBy users.name asc, users.created desc }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 73,
        },
    },
    value: Query(
        Select(
            Select {
                projection: Star(
                    Region {
                        start: Position {
                            line: 1,
                            column: 16,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                ),
                from: TableRef {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 23,
                            },
                            end: Position {
                                line: 1,
                                column: 28,
                            },
                        },
                        value: "users",
                    },
                    alias: None,
                },
                joins: [],
                where_: None,
                group_by: [],
                order_by: [
                    Order {
                        expr: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 37,
                                },
                                end: Position {
                                    line: 1,
                                    column: 47,
                                },
                            },
                            value: Access {
                                record: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 37,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 42,
                                        },
                                    },
                                    value: Var(
                                        "users",
                                    ),
                                },
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 43,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 47,
                                        },
                                    },
                                    value: "name",
                                },
                            },
                        },
                        direction: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 48,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 51,
                                    },
                                },
                                value: Asc,
                            },
                        ),
                    },
                    Order {
                        expr: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 53,
                                },
                                end: Position {
                                    line: 1,
                                    column: 66,
                                },
                            },
                            value: Access {
                                record: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 53,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 58,
                                        },
                                    },
                                    value: Var(
                                        "users",
                                    ),
                                },
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 59,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 66,
                                        },
                                    },
                                    value: "created",
                                },
                            },
                        },
                        direction: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 67,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 71,
                                    },
                                },
                                value: Desc,
                            },
                        ),
                    },
                ],
                limit: None,
                offset: None,
            },
        ),
    ),
}
