crates/alder-parse/src/snapshots/alder_parse__query__tests__select_where.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users where users.active }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 49,
        },
    },
    value: Query(
        Select(
            Select {
                projection: Star(
                    Region {
                        start: Position {
                            line: 1,
                            column: 16,
                        },
                        end: Position {
                            line: 1,
                            column: 17,
                        },
                    },
                ),
                from: TableRef {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 23,
                            },
                            end: Position {
                                line: 1,
                                column: 28,
                            },
                        },
                        value: "users",
                    },
                    alias: None,
                },
                joins: [],
                where_: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 35,
                            },
                            end: Position {
                                line: 1,
                                column: 47,
                            },
                        },
                        value: Access {
                            record: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 35,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 40,
                                    },
                                },
                                value: Var(
                                    "users",
                                ),
                            },
                            field: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 41,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 47,
                                    },
                                },
                                value: "active",
                            },
                        },
                    },
                ),
                group_by: [],
                order_by: [],
                limit: None,
                offset: None,
            },
        ),
    ),
}
